--- a/src/Components/Global/Footer/footer.scss
+++ b/src/Components/Global/Footer/footer.scss
@@ -1,5 +1,5 @@
 .footer-background {
     padding: 40px 20px;
     text-align: center;
-    background-color: #A5A5A7;
+    background-color: #484848;
 }
