--- a/src/Components/Global/Navigation/navigation.scss
+++ b/src/Components/Global/Navigation/navigation.scss
@@ -11,12 +11,12 @@
 }
 
 .navbar {
-    background-color: #A5A5A7;
+    background-color: #484848;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #C97E84;
+    color: #874040;
 
     @media screen and (min-width: 769px) and (max-width: 1920px) {
         flex-direction: row;
@@ -26,7 +26,7 @@
 .mobile-bars {
     font-size: 24px;
     background: none;
-    color: #C97E84;
+    color: #874040;
 
     &_exit {
         margin-left: 30px;
@@ -38,7 +38,7 @@
 }
 
 .nav-menu {
-    background-color:  #A5A5A7;
+    background-color:  #484848;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -103,7 +103,7 @@
     }
 
     &:hover {
-        background-color: #C97E84;
+        background-color: #874040;
     }
 }
 
@@ -118,7 +118,7 @@
 
 
 .navbar-toggle {
-    background-color: #A5A5A7;
+    background-color: #484848;
     width: 100%;
     height: 80px;
     display: flex;
@@ -133,6 +133,7 @@ span {
     margin-left: 16px;
 }
 
-p {
+h1 {
     margin-left: 16px;
+    color: #FFFFFF;
 }
