--- a/src/Styles/settings.scss
+++ b/src/Styles/settings.scss
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-    background: #C97E84;
+    background: #874040;
     color: #FFFFFF;
     font-family: 'Dancing Script';
 }
